--- a/schema.html
+++ b/schema.html
@@ -14,6 +14,8 @@
     <a href="alipay://test">跳转到支付宝</a>
     <br><br>
     <a href="weixin://test">跳转到微信</a>
+    <br><br>
+    <a href="kwai://test">跳转到快手</a>
 
 </body>
 </html>
