--- a/schema.html
+++ b/schema.html
@@ -16,6 +16,8 @@
     <a href="weixin://test">跳转到微信</a>
     <br><br>
     <a href="kwai://test">跳转到快手</a>
+    <br><br>
+    <a href="pinduoduo://test">跳转到拼多多</a>
 
 </body>
 </html>
