--- a/schema.html
+++ b/schema.html
@@ -18,6 +18,8 @@
     <a href="kwai://test">跳转到快手</a>
     <br><br>
     <a href="pinduoduo://test">跳转到拼多多</a>
+    <br><br>
+    <a href="https://www.google.com">跳转到Google</a>
 
 </body>
 </html>
